--- a/src/main/resource/template/admin/index.html
+++ b/src/main/resource/template/admin/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>图书管理后台</title>
+    <title>首页</title>
 </head>
 <body>
-<h1>你好</h1>
+
 </body>
 
 </html>
