--- a/src/main/resource/template/admin/login.html
+++ b/src/main/resource/template/admin/login.html
@@ -38,14 +38,17 @@
             padding: 10px;
             font-size: 16px;
         }
+
         .form-signin .form-control:focus {
             z-index: 2;
         }
-        .form-signin input[type="email"] {
+
+        .form-signin input[type="text"] {
             margin-bottom: -1px;
             border-bottom-right-radius: 0;
             border-bottom-left-radius: 0;
         }
+
         .form-signin input[type="password"] {
             margin-bottom: 10px;
             border-top-left-radius: 0;
@@ -54,27 +57,50 @@
     </style>
 </head>
 <body>
-<form class="form-signin" action="">
-<!--    <img class="mb-4" src="{{ site.baseurl }}/docs/{{ site.docs_version }}/assets/brand/bootstrap-solid.svg" alt=""-->
-<!--         width="72" height="72">-->
+<div class="form-signin">
+    <!--    <img class="mb-4" src="{{ site.baseurl }}/docs/{{ site.docs_version }}/assets/brand/bootstrap-solid.svg" alt=""-->
+    <!--         width="72" height="72">-->
     <h1 class="h3 mb-3 font-weight-normal">欢迎登陆图书管理系统</h1>
     <label for="account" class="sr-only">account</label>
-    <input type="text" id="account" class="form-control mb-2" placeholder="" required autofocus>
+    <input type="text" id="account" name="account" class="form-control mb-2" placeholder="" required autofocus>
     <label for="password" class="sr-only">password</label>
-    <input type="password" id="password" class="form-control" placeholder="" required>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
-</form>
+    <input type="password" id="password" name="password" class="form-control" placeholder="" required>
+    <button class="btn btn-lg btn-primary btn-block" id="submit">登陆</button>
+</div>
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong id="login-err-message">登陆失败</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
-<!--        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
-<!--        crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"-->
-<!--        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"-->
-<!--        crossorigin="anonymous"></script>-->
+<!--integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"-->
+<!--crossorigin="anonymous"></script>-->
 <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"-->
 <!--        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"-->
 <!--        crossorigin="anonymous"></script>-->
+<script type="application/javascript">
+    $(document).ready(function () {
+        $("#submit").click(function () {
+            const account = $('#account').val();
+            const password = $('#password').val();
+            console.log('account', account);
+            console.log('password', password);
+            if (!account || !password) return;
+            $.post('/api/admin/login', {'account': account, 'password': password}, function (res) {
+                if (res.code === 0) {
+                    //success
+                    window.location.href = '/admin/index';
+                } else {
+
+                }
+            }, 'json');
+        })
+    });
+</script>
 </body>
 </html>
