--- a/src/main/resource/template/admin/index.html
+++ b/src/main/resource/template/admin/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" onclick="showPage('/admin/welcome')">首页</a>
+    <a class="navbar-brand" href="#" onclick="showPage('/static/view/welcome.html')">首页</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="showPage('/admin/addBook')">添加图书</a>
+                <a class="nav-link" href="#" onclick="showPage('/static/view/add-book.html')">添加图书</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" onclick="showPage('')">查看图书</a>
@@ -44,7 +44,7 @@
         </form>
     </div>
 </nav>
-<iframe src="/admin/welcome" frameborder="0" class="w-100" onload="resetIframeHeight()">
+<iframe src="/static/view/welcome.html" frameborder="0" class="w-100" onload="resetIframeHeight()">
 </iframe>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -56,8 +56,8 @@
     }
 </script>
 <script type="application/javascript">
-    function showPage(url) {
-        $('iframe').prop('src', url);
+    function showPage(src) {
+        $('iframe').prop('src', src);
     }
 </script>
 </html>
