--- a/src/main/resource/static/view/add-book.html
+++ b/src/main/resource/static/view/add-book.html
@@ -7,14 +7,19 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/bootstrap/bootstrap.min.css">
-    <title>添加图书</title>
+    <link rel="stylesheet" href="/static/jqueryToast/css/toast.style.css">
+    <title>新增图书</title>
 </head>
 <body>
-<h1>添加图书</h1>
-<form class="mt-2" action="#">
+<h1>新增图书</h1>
+<form class="mt-2" action="#" id="addBookForm">
     <div class="form-inline form-group">
         <label for="bookName">名&emsp;&emsp;称：</label>
         <input class="form-control" name="bookName" id="bookName" placeholder="Name"/>
+    </div>
+    <div class="form-inline form-group">
+        <label for="picture">图片地址：</label>
+        <input class="form-control" name="picture" id="picture" placeholder="picture"/>
     </div>
     <div class="form-inline form-group">
         <label for="price">价&emsp;&emsp;格：</label>
@@ -24,30 +29,41 @@
         <label for="num">数&emsp;&emsp;量：</label>
         <input class="form-control" name="num" id="num" placeholder="num"/>
     </div>
-    <div class="form-inline form-group">
-        <label for="picture">图片地址：</label>
-        <input class="form-control" name="picture" id="picture" placeholder="picture"/>
-    </div>
-    <div class="form-inline form-group">
-        <label for="sellTime">开售时间：</label>
-        <input class="form-control" name="sellTime" id="sellTime" placeholder="sellTime"/>
-    </div>
     <button class="btn btn-success" type="submit">提交</button>
 </form>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/static/bootstrap/bootstrap.min.js"></script>
+<script src="/static/jqueryToast/js/toast.script.js"></script>
 <script type="application/javascript">
     $(document).ready(function () {
-        $('form').submit(function () {
-            console.log('submit');
+        $('#addBookForm').submit(function () {
             const $form = $('form');
             const data = $form.serialize();
+            console.log('submit>>>', data);
             console.log(data);
             $.post('/book/add', data, (res) => {
                 console.log(res);
+                if (res.code !== 0) {
+                    //添加失败
+                    $.Toast('', res.message, 'error', {
+                        stack: true,
+                        position_class: 'toast-top-right',
+                        timeout: 2000,
+                        has_icon: false,
+                    });
+                } else {
+                    document.getElementById('addBookForm').reset();
+                    $.Toast('', '图书添加成功', 'success', {
+                        stack: true,
+                        position_class: 'toast-top-right',
+                        timeout: 2000,
+                        has_icon: false,
+                    });
+                }
             }, 'json');
             return false;
         });
-    })
+    });
 </script>
 </body>
 </html>
