--- a/src/main/resource/template/admin/index.html
+++ b/src/main/resource/template/admin/index.html
@@ -27,10 +27,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="showPage('/static/view/add-book.html')">添加图书</a>
+                <a class="nav-link" href="#" onclick="showPage('/static/view/add-book.html')">新增图书</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="showPage('')">查看图书</a>
+                <a class="nav-link" href="#" onclick="showPage('/static/view/list-book.html')">图书列表</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
