--- a/src/main/resource/static/view/list-book.html
+++ b/src/main/resource/static/view/list-book.html
@@ -9,20 +9,103 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/static/bootstrap/bootstrap-table.min.css">
-<!--    <link rel="stylesheet" href="/static/fontawesome/fontawesome.5-6-3.all.css">-->
+    <link rel="stylesheet" href="/static/jqueryToast/css/toast.style.css">
+    <!--    <link rel="stylesheet" href="/static/fontawesome/fontawesome.5-6-3.all.css">-->
     <title>图书列表</title>
 </head>
 <body>
-<h1>图书列表</h1>
-<table id="bookTable">
-</table>
+<form class="form-group form-inline mt-4">
+    <label>ID：<input class="form-control" type="text"/></label>
+    <label>书名：<input class="form-control" type="text"/></label>
+    <label>价格：
+        <input class="form-control col-2" type="text"/>
+        <strong>&nbsp;<&nbsp;</strong>
+        <input class="form-control col-2" type="text"/>
+    </label>
+    <label>销量：
+        <input class="form-control col-2" type="text"/>
+        <strong>&nbsp;<&nbsp;</strong>
+        <input class="form-control col-2" type="text"/>
+    </label>
+</form>
+<table id="bookTable"></table>
+<!-- Modal -->
+<div class="modal fade" id="bookModify" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">修改图书</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form class="form-group" action="#" id="modifyBookForm">
+                    <div class="row">
+                        <label class="col-2 text-right my-auto" for="book_id">ID：</label>
+                        <input name="id" id="book_id" type="text" class="form-control col-9" readonly/>
+                    </div>
+                    <div class="row">
+                        <label class="col-2 text-right my-auto" for="book_bookName">名称：</label>
+                        <input name="bookName" id="book_bookName" type="text" class="form-control col-9"/>
+                    </div>
+                    <div class="row">
+                        <label class="col-2 text-right my-auto" for="book_picture">图片：</label>
+                        <input name="picture" id="book_picture" type="text" class="form-control col-9"/>
+                    </div>
+                    <div class="row">
+                        <label class="col-2 text-right my-auto" for="book_price">价格：</label>
+                        <input name="price" id="book_price" type="text" class="form-control col-9"/>
+                    </div>
+                    <div class="row">
+                        <label class="col-2 text-right my-auto" for="book_num">库存：</label>
+                        <input name="num" id="book_num" type="text" class="form-control col-9"/>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" onclick="modifyBook()">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="/static/jquery/jquery-3.3.1.min.js"></script>
-<!--<script src="/static/bootstrap/popper.min.js"></script>-->
+<script src="/static/jqueryToast/js/toast.script.js"></script>
+<script src="/static/bootstrap/popper.min.js"></script>
 <script src="/static/bootstrap/bootstrap.min.js"></script>
 <script src="/static/bootstrap/bootstrap-table.min.js"></script>
 <script src="/static/bootstrap/bootstrap-table-zh-CN.js"></script>
 <script type="application/javascript">
+    String.prototype.format = function (args) {
+        if (arguments.length > 0) {
+            var result = this;
+            if (arguments.length === 1 && typeof (args) == "object") {
+                for (let key in args) {
+                    let reg = new RegExp("({" + key + "})", "g");
+                    result = result.replace(reg, args[key]);
+                }
+            } else {
+                for (var i = 0; i < arguments.length; i++) {
+                    if (arguments[i] === undefined) {
+                        return "";
+                    } else {
+                        let reg = new RegExp("({[" + i + "]})", "g");
+                        result = result.replace(reg, arguments[i]);
+                    }
+                }
+            }
+            return result;
+        } else {
+            return this;
+        }
+    }
+</script>
+<script type="application/javascript">
+    let clickedRowIndex = -1;
+
     $(document).ready(function () {
         reloadTable();
     });
@@ -34,30 +117,35 @@
             pagination: true,
             search: false,
             locale: 'zh-CN',
-            columns: [{
-                field: 'index',
-                title: '#',
-                formatter: indexFormatter,
-            }, {
-                field: 'picture',
-                title: '图片',
-                formatter: pictureFormatter,
-            }, {
-                field: 'bookName',
-                title: '书名',
-            }, {
-                field: 'price',
-                title: '价格',
-                sortable: true,
-            }, {
-                field: 'sellNum',
-                title: '销量',
-                sortable: true,
-            }, {
-                field: 'num',
-                title: '库存',
-                sortable: true,
-            },]
+            uniqueId: 'id',
+            rememberOrder: true,
+            pageList: [10, 20],
+            onClickRow: clickRow,
+            columns:
+                [{
+                    field: 'id',
+                    title: 'ID',
+                }, {
+                    field: 'picture',
+                    title: '图片',
+                    formatter: pictureFormatter,
+                }, {
+                    field: 'bookName',
+                    title: '书名',
+                }, {
+                    field: 'price',
+                    title: '价格',
+                }, {
+                    field: 'sellNum',
+                    title: '销量',
+                }, {
+                    field: 'num',
+                    title: '库存',
+                }, {
+                    field: 'sellState',
+                    title: '是否上架',
+                    formatter: sellStateFormatter,
+                },]
         });
     }
 
@@ -70,8 +158,83 @@
         return img.outerHTML;
     }
 
-    function indexFormatter(value, row, index) {
-        return index + 1;
+    /*阻止事件冒泡*/
+    function clickSelect() {
+        event.stopPropagation();
+    }
+
+    function sellStateChange(id) {
+        let sellState = $('#select_' + id).find('option:selected').val();
+        $.post('/book/update', {id: id, sellState: sellState,}, (res) => {
+            if (res.code === 0) {
+                $.Toast('', '修改成功', 'success', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 2000,
+                    has_icon: false,
+                });
+            } else {
+                $.Toast('', res.message, 'error', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 2000,
+                    has_icon: false,
+                });
+            }
+        }, 'json');
+    }
+
+    function sellStateFormatter(value, row, index, field) {
+        const id = row['id'];
+        const $selectDiv = $("<div><select id='select_" + id + "' class='custom-select' onclick='clickSelect()' onchange='sellStateChange(" + id + ")'>" +
+            "<option value='1'>正常</option>" +
+            "<option value='0'>已下架</option></select></div>");
+        const $option = $selectDiv.find('select>option[value={0}]'.format(value));
+        $option.attr('selected', 'selected');
+        return $selectDiv.html();
+    }
+
+    function clickRow(row, $element, field) {
+        if (field === 'sellState') return;
+        console.log($element);
+        Object.keys(row).forEach((key) => {
+            const $input = $('#book_' + key);
+            if ($input) {
+                $input.val(row[key]);
+            }
+        });
+
+        clickedRowIndex = 0;
+        $('#bookModify').modal('toggle');
+    }
+
+    function modifyBook() {
+        const $form = $('#modifyBookForm');
+        const param = $form.serialize();
+        $.post('/book/update', param, (res) => {
+            if (res.code === 0) {
+                $.Toast('', '修改成功', 'success', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 2000,
+                    has_icon: false,
+                });
+                const newRow = {};
+                const serializeArr = $form.serializeArray();
+                serializeArr.forEach((value) => {
+                    newRow[value['name']] = value['value'];
+                });
+                $('#bookTable').bootstrapTable('updateByUniqueId', {'id': newRow['id'], 'row': newRow});
+            } else {
+                $.Toast('', res.message, 'error', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 2000,
+                    has_icon: false,
+                });
+            }
+            $('#bookModify').modal('toggle');
+        });
     }
 </script>
 </html>
