--- a/src/main/resource/template/index.html
+++ b/src/main/resource/template/index.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>首页</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--  解决图片403问题  -->
+    <meta name="referrer" content="no-referrer"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/static/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/jqueryToast/css/toast.style.css">
+    <title>图书展示</title>
+    <style>
+        .picture {
+            width: 100%;
+        }
+
+        .pictureDiv {
+            width: 30%;
+        }
+
+        .descDiv {
+            width: 70%;
+            float: left;
+        }
+    </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/admin/index">图书管理系统</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="row mx-5">
+    <div th:each="book : ${bookList}" class="col-3 my-3">
+        <div class="float-left pictureDiv">
+            <img src="#" alt="..."
+                 th:attr="src=${book.picture},alt=${book.bookName}" class="picture"/>
+        </div>
+        <div class="float-left descDiv pl-3">
+            <strong th:text="${book.bookName}"></strong>
+            <p th:text="|价格: ￥${book.price}|"></p>
+            <button th:if="${book.num>0}" class="btn btn-primary"
+                    th:onclick="|purchase(${book.id},this)|">购买
+            </button>
+            <button th:if="${book.num<=0}" class="btn btn-dark" disabled="disabled"
+                    th:onclick="|purchase(${book.id},this)|">库存不足
+            </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-        </ul>
+        </div>
     </div>
-</nav>
+</div>
+<script src="/static/jquery/jquery-3.3.1.min.js"></script>
+<script src="/static/jqueryToast/js/toast.script.js"></script>
+<script type="application/javascript">
+    function purchase(id, self) {
+        console.log(id);
+        $.getJSON('/book/purchase', {id: id,}, (res) => {
+            console.log(res);
+            /*设置按钮样式*/
+            reloadBtn(res.data, self);
+            if (res.code === 0) {
+                $.Toast('', '购买成功', 'success', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 1000,
+                    has_icon: false,
+                });
+            } else {
+                $.Toast('', res.message, 'error', {
+                    stack: true,
+                    position_class: 'toast-top-right',
+                    timeout: 2000,
+                    has_icon: false,
+                });
+            }
+        });
+    }
+
+    function reloadBtn(num, self) {
+        const $self = $(self);
+        /*检查剩余数量是否是0*/
+        console.log($self);
+        if (num <= 0) {
+            $self.html('库存不足');
+            $self.removeClass('btn-primary');
+            $self.addClass('btn-dark');
+            $self.attr('disabled', 'disabled');
+        }
+    }
+</script>
 </body>
 </html>
