--- a/src/main/resource/template/admin/index.html
+++ b/src/main/resource/template/admin/index.html
@@ -32,23 +32,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" onclick="showPage('/static/view/list-book.html')">图书列表</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    查看图书
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="showPage('/static/view/')">图书汇总</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 <iframe src="/static/view/welcome.html" frameborder="0" class="w-100" onload="resetIframeHeight()">
